# intensicare

./: .cspell-domain.txt  .dockerignore  .env.example  .gitignore  CRITICA_MVP.md  Dockerfile  HANDOFF.yaml  Makefile  PLANS.md  README.md  SECURITY.md  STACK_DECISION.md  VERIFICATION_REPORT.md  alembic.ini  cspell.json  docker-compose.prod.yml  docker-compose.yml  pendencias.md  pyproject.toml  test_fixes.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  frontend-v3.yml  validate-alerts.yml
.husky/: pre-commit
_legacy_frontend/: Dockerfile
_work/alerts/: registry.json  sepse.yaml
alembic/versions/: 0002_add_definition_version.py  0003_add_audit_trail.py  0004_pgcrypto_phi.py  0005_algorithm_registry.py  0006_add_vital_sign_natural_key.py  0007_seed_mews_v1_0_1.py  0008_seed_news2_v2_0_0.py  0009_canonical_severity_model.py  0010_seed_sofa_v1_1_0.py  0011_schema_deltas.py  0012_phase2_tables.py  0013_seed_domain_definitions.py  0014_seed_sepsis_definitions.py  0015_seed_aki_definitions.py  0016_seed_electrolyte_definitions.py  0017_seed_hemo_definitions.py  0018_seed_respiratory_definitions.py  0019_seed_correlation_definitions.py  0020_activate_mews_v2_0_0.py  0021_activate_news2_v3_0_0.py  0022_activate_sofa_v2_0_0.py  0023_activate_clinical_ratify.py  0024_wave1c_ratify_conversion.py  0025_seed_sepsis_ratified.py  0026_seed_p1_clinical_ratified.py  0027_seed_unverifiable_ratified.py  0028_wave3a_ratify_activation.py  0029_ratification_record.py  0030_fk_index_clinical_score_algo_version.py  0031_add_antimicrobial_prophylaxis_alert_routing.py  0032_add_pathways_stability_deterioration.py  0033_add_passo21_22_tables.py  0034_add_encounter_id_to_patient_pathway.py  0035_add_user_role.py  0036_add_definition_hash_to_pathways.py  0037_add_unique_active_enrollment_index.py  0038_seed_default_threshold_config.py  0039_activate_mews_v3_0_0.py  0040_backfill_admin_role.py  35c5eebda2c7_add_patient_location_current_and_.py
audit-results/: CONSOLIDATED_FORENSIC_AUDIT.md  FORENSIC_AUDIT_REPORT.md  GATE_FINAL_BUILD.md  GATE_FINAL_DS.md  RELATORIO_FINAL.md  forensic-adr-compliance.md  forensic-rules-security.md  forensic-tdd-gap-analysis.md  verify.py
design-tokens/: $themes.json  config.js
design-tokens/brand/: brand.default.json  brand.schema.json
design-tokens/clinical/: severity.json  status.json
design-tokens/primitives/: breakpoints.json  color-ramps.json  elevation.json  motion.json  radius.json  spacing.json  type.json  z-index.json
design-tokens/semantic/: action.json  alert.json  feedback.json  surface.json  text.json
docs/: ux-review-fase-5b.md
docs/adr/: 0001-frontend-stack-and-ui-library.md  0002-dark-first-compact-base-theme.md  0003-light-mode-client-overlay.md  0004-per-tenant-white-label-runtime-color.md  0005-design-token-source-of-truth-and-governance.md  0006-no-formal-token-scales.md  0007-neumorphic-elevation-visual-signature.md  0008-pagecontainer-app-shell-cascading-refetch.md  0009-information-architecture-no-persistent-nav.md  0010-drawer-in-drawer-secondary-view-pattern.md  0011-js-window-width-responsive-strategy.md  0012-canonical-primitives-vs-parallel-implementations.md  0013-clinical-severity-color-system.md  0014-no-abnormal-value-threshold-flagging.md  0015-config-driven-dynamic-clinical-form-engine.md  0016-feedback-and-loading-patterns.md  0017-fragmented-real-time-architecture.md  0018-client-integration-and-authorization-model.md  0019-stack-ratification-radix-tailwind.md  0020-trilhas-engine-architecture.md  0021-trilhas-engine-data-model.md  0022-ventilacao-service-architecture.md  0023-estabilidade-scoring-model.md  0024-piora-clinica-detection-strategy.md  0025-movimentacao-adt-integration-pattern.md  0026-prescricao-drug-interaction-safety.md  0027-prescricao-lifecycle-state-machine.md  0028-evolucoes-clinical-notes-architecture.md  0029-formularios-clinicos-dynamic-form-engine.md  ADR-0030-frontend-pathway-architecture.md  ADR-0031-mvp-pathway-sepsis.md  ADR-0032-component-migration-strategy.md  ADR-0033-pathway-view-generic-pattern.md  ADR-0034-realtime-websocket-strategy.md  ADR-0035-sepsis-declarative-port.md  ADR-0036-rbac-effective-roles.md  ADR-0037-pathway-failfast-policy.md  ADR-0038-clinical-coverage-scope.md  ADR-0039-alert-group-read-aggregation.md  README.md
docs/audit/: ALERT_CONSOLIDATION_ANALYSIS.md  BACKEND_FRONTEND_GAP_MAP.md  BLOCKERS.md  ENDPOINT_COVERAGE_MATRIX.md  EXECUTION_GUIDE.md  FORENSICS_FINAL_VERDICT.md  (+19 more)
frontend/: package-lock.json  package.json
frontend-v2/: .eslintrc.json  Dockerfile  HANDOFF_FECHAMENTO.yaml  PLANS.md  PLANS_FECHAMENTO.md  PLANS_SPRINT_5_8.md  README.md  _contrast_check.py  _verify_fix.py  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  types.ts
frontend-v3/: HANDOFF.yaml  PLANS.md  middleware.ts  next.config.ts  package-lock.json  package.json
infra/: watchdog_lambda.py
scripts/: build_alert_registry.py  check_tokens.py  check_vector_coverage.py  check_versions.py  validate_alerts.py  verify_units.py
tests/: conftest.py  test_abac_clinical.py  test_alert_compiler.py  test_alert_copy.py  test_alert_engine.py  test_alerts.py  test_algorithm_registry.py  test_altb_trigger.py  test_antimicrobial.py  test_arq_settings.py  test_audit_trail.py  test_auth.py  test_auth_dependencies.py  test_auth_stub.py  test_cds_hooks.py  test_clinical_forms.py  test_correlation_engine.py  test_dashboard.py  test_deterioration_trend.py  test_domain_aki.py  test_domain_alertas.py  test_domain_antimicrobiano.py  test_domain_comunicacao.py  test_domain_delirium.py  test_domain_documentacao.py  test_domain_eficiencia.py  test_domain_electrolyte.py  test_domain_estabilidade.py  test_domain_evolucoes.py  test_domain_fluid_balance.py  test_domain_formularios.py  test_domain_hemo.py  test_domain_movimentacao.py  test_domain_operacional.py  test_domain_pharmaco.py  test_domain_pharmaco_delirium.py  test_domain_piora_clinica.py  test_domain_prescricao.py  test_domain_profilaxia.py  test_domain_respiratory.py  (+51 more)
(+2141 files in other folders)
